# clerk-bot

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: autofill_session.py  cli.py  config.py  server.py
backend/src/agents/: form_agent.py
backend/src/models/: preferences.py  profile.py
backend/src/routes/: autofill.py  documents.py  health.py  preferences.py  profile.py
backend/src/storage/: filesystem.py
backend/src/tools/: __init__.py  ask_human.py  page_bridge.py  parse_document.py  preferences_store.py  profile_store.py
extension/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  wxt.config.ts
extension/entrypoints/background/: index.ts
extension/entrypoints/content/: index.ts  style.css
extension/entrypoints/popup/: App.tsx  index.html  main.tsx  style.css
extension/entrypoints/popup/components/: DocumentList.tsx  PreferencesManager.tsx  ProfileViewer.tsx  StatusIndicator.tsx
extension/lib/api/: backend-client.ts
extension/lib/content/: dom-scanner.ts  overlay-ui.ts
extension/lib/types/: messages.ts  preferences.ts  profile.ts
